<resources>
    <string name="app_name">Plantam</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="test_array">
        <item>event 1</item>
        <item>event 2</item>
        <item>event 3</item>
        <item>event 4</item>
        <item>event 5</item>
        <item>event 6</item>
        <item>event 7</item>
    </string-array>
    <string name="title_activity_user_authentication">User Authentication</string>
    <string name="explore_events">Explore Events</string>
    <string name="plantam_settings">Settings</string>
    <string name="activity_login">Login</string>
    <string name="title_activity_public_events">Public Events</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_add_event">Add an Event</string>
    <string name="wait_text">Please wait ...</string>
    <string name="form_event_title">Event title</string>
    <string name="form_description">Description</string>
    <string name="form_date">Date</string>
    <string name="form_start_time">Start time</string>
    <string name="form_end_time">End time</string>
    <string name="event_title">Event Title</string>
    <string name="description">Description</string>
    <string name="date">date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>

    <!-- Event detail dialog-->
    <string name="event_detail_delete">Delete</string>
    <string name="event_detail_edit">Edit</string>
    <!-- Settings -->
    <string name="plantam_category_settings">Choose category</string>

    <string name="setting_checkbox_sport">Sport</string>
    <string name="setting_checkbox_club">Club</string>
    <string name="setting_checkbox_academic">Academic</string>
    <string name="setting_checkbox_social">Social</string>
    <string name="setting_checkbox_other">Other</string>

    <string name="plantam_filter_settings">Filter events</string>
    <string name="setting_checkbox_myevents">My events</string>
    <string name="setting_checkbox_publicevents">Public events</string>
    <string name="setting_checkbox_trinitytodayevents">Trinity Today's events</string>


    <string name="prompt_name">Full Name</string>
    <string name="prompt_classyear">Class Year</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="prompt_msg">Type a message</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Create Account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_send">Send</string>
    <string name="error_invalid_email">Sorry, invalid email address. Make sure it's "@trincoll.edu"</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email</string>
    <string name="PLANTAM_API_KEY">AIzaSyDo0cnv14Bc28A3n7ERljX9lPZj5tihP-I</string>

</resources>
